--- a/visualization/Visualización emojis.ipynb
+++ b/visualization/Visualización emojis.ipynb
@@ -17,10 +17,6 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "\n",
     "from maquinas.regular.dfa import DeterministicFiniteAutomaton as DFA\n",
     "from maquinas.simulation import Simulation"
    ]
@@ -87,7 +83,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226ff27b8>"
+       "<graphviz.dot.Digraph at 0x7fbea10135f8>"
       ]
      },
      "execution_count": 2,
@@ -168,7 +164,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226fc2390>"
+       "<graphviz.dot.Digraph at 0x7fbeb969dbe0>"
       ]
      },
      "execution_count": 3,
@@ -241,7 +237,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226ff2588>"
+       "<graphviz.dot.Digraph at 0x7fbea1013358>"
       ]
      },
      "execution_count": 4,
@@ -348,7 +344,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226fc5908>"
+       "<graphviz.dot.Digraph at 0x7fbea1013048>"
       ]
      },
      "execution_count": 5,
@@ -421,7 +417,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226f8a908>"
+       "<graphviz.dot.Digraph at 0x7fbea1013e80>"
       ]
      },
      "execution_count": 6,
@@ -535,7 +531,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb226f8a7f0>"
+       "<graphviz.dot.Digraph at 0x7fbea1013c50>"
       ]
      },
      "execution_count": 7,
@@ -551,13 +547,6 @@
     "uno_ceros.add_error_state(\"qₑ\")\n",
     "uno_ceros.graph()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
