--- a/basic/Ejemplo básico GLC.ipynb
+++ b/basic/Ejemplo básico GLC.ipynb
@@ -728,7 +728,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f229aab07f0>"
+       "<graphviz.dot.Graph at 0x7ff5e900aa90>"
       ]
      },
      "execution_count": 8,
@@ -1073,7 +1073,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f229aa152e8>"
+       "<graphviz.dot.Graph at 0x7ff5e8fc2a20>"
       ]
      },
      "execution_count": 15,
@@ -1365,7 +1365,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f229aa72128>"
+       "<graphviz.dot.Graph at 0x7ff5e8fbb128>"
       ]
      },
      "execution_count": 19,
