Preparing for next version

--- a/basic/Ejemplo básico PDA.ipynb
+++ b/basic/Ejemplo básico PDA.ipynb
@@ -15,27 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "module_path = os.path.abspath(os.path.join('../..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "\n",
     "from maquinas.contextfree.pda import PushDownAutomaton as PDA\n",
     "from maquinas.simulation import Simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -68,7 +54,7 @@
      "text": [
       "States  : q_0, q_1, q_2\n",
       "Sigma   : ε, a, b\n",
-      "Gamma   : ε, Z₀, A\n",
+      "Gamma   : ε, Z₀, A, a, b\n",
       "Initial : q_0\n",
       "Aceptors: q_2\n",
       "Transitions:\n",
@@ -86,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +80,12 @@
      "output_type": "stream",
      "text": [
       "q_0, Z₀]\n",
-      " a -> q_0, AZ₀],\n",
-      " a -> q_0, AAZ₀],\n",
-      " a -> q_0, AAAZ₀],\n",
-      " b -> q_1, AAZ₀],\n",
-      " b -> q_1, AZ₀],\n",
-      " b -> q_1, Z₀],\n",
+      " a -> q_0, A Z₀],\n",
+      " a -> q_0, A A Z₀],\n",
+      " a -> q_0, A A A Z₀],\n",
+      " b -> q_1, A A Z₀],\n",
+      " b -> q_1, A Z₀],\n",
+      " b -> q_1, Z₀] | q_2, Z₀],\n",
       " ε -> q_2, Z₀],\n",
       " \n",
       "Con q_2, Z₀] Se acepta? Sí\n"
@@ -114,30 +100,30 @@
     "        print(f\"{aⁿbⁿ.states2string(q)}\",end=\"\\n \")\n",
     "    res=q\n",
     "    \n",
-    "print(f\"\\nCon {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.accept(res) else \"No\" )"
+    "print(f\"\\nCon {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.acceptor(res) else \"No\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Con q_1, AZ₀] Se acepta? No\n"
+      "Con q_1, A Z₀] Se acepta? No\n"
      ]
     }
    ],
    "source": [
     "res=aⁿbⁿ.delta_extended(None,\"aab\")\n",
-    "print(f\"Con {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.accept(res) else \"No\" )"
+    "print(f\"Con {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.acceptor(res) else \"No\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,18 +136,18 @@
    ],
    "source": [
     "res=aⁿbⁿ.delta_extended(None,\"aabb\")\n",
-    "print(f\"Con {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.accept(res) else \"No\" )"
+    "print(f\"Con {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if aⁿbⁿ.acceptor(res) else \"No\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90596767bfe04b5287f507c0d66841b5",
+       "model_id": "03bf49164b7746a998bad79e74571f88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,10 +240,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fd6f15660b8>"
+       "<graphviz.dot.Digraph at 0x7f2de44821d0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,10 +328,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fd6db6b4128>"
+       "<graphviz.dot.Digraph at 0x7f2de44822e8>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "930d94addd6a4e8b93eb270ea007687a",
+       "model_id": "61144e6b0cef4176af7e150bae5fa547",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +401,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
