--- a/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
+++ b/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "No terminal : S\n",
-      "Terminals   : b, a\n",
+      "Terminals   : a, b\n",
       "Start       : S\n",
       "Productions :\n",
       " S → aSb | ε\n"
@@ -344,8 +344,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No terminal : B, R\n",
-      "Terminals   : (, b, +, *, a, ), ∅, ϵ\n",
+      "No terminal : R, B\n",
+      "Terminals   : ϵ, b, (, ∅, ), *, a, +\n",
       "Start       : R\n",
       "Productions :\n",
       " R → B | R+R | R* | RR | (R)\n",
@@ -402,8 +402,8 @@
    ],
    "source": [
     "roots,chart,forest=re.parse('(a*ba*ba*)*')\n",
-    "trees=re.extract_trees(forest)\n",
-    "for i,step in enumerate(re.derivation(list(trees)[0])):\n",
+    "trees=list(re.extract_trees(forest))\n",
+    "for i,step in enumerate(re.derivation(trees[0])):\n",
     "    if not i:\n",
     "        print(\"\".join(step),end=\"\")\n",
     "    else:\n",
@@ -416,8 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roots,chart,forest=re.parse(\"(a*ba*ba*)*\")\n",
-    "trees=re.extract_trees(forest)\n"
+    "re.save_trees_img(trees,filename='arboles_re')"
    ]
   },
   {
@@ -426,17 +425,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re.save_trees_img(trees,filename='arboles_re.png')"
+    "re.save_trees_img([trees[0]],filename=f'arbol_re') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of trees 28\n"
+     ]
+    }
+   ],
    "source": [
-    "for i,t in enumerate(trees):\n",
-    "   re.save_img([t],filename=f'arbol_re{i}.png')    "
+    "print(\"Total number of trees\",len(trees))"
    ]
   }
  ],
