--- a/basic/Ejemplo básico AFND.ipynb
+++ b/basic/Ejemplo básico AFND.ipynb
@@ -118,7 +118,7 @@
     "        print(f\"{q}\",end=\"\\n \")\n",
     "    res=q\n",
     "    \n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -137,7 +137,7 @@
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaab\")\n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -156,7 +156,7 @@
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaa\")\n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -233,7 +233,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7ff0fc04b588>"
+       "<graphviz.dot.Digraph at 0x7fea18078e10>"
       ]
      },
      "execution_count": 8,
@@ -319,7 +319,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7ff0fc04b2e8>"
+       "<graphviz.dot.Digraph at 0x7fea18089278>"
       ]
      },
      "execution_count": 9,
@@ -339,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "811dc819a89c4451b93e663d95378a66",
+       "model_id": "e77d112b759b4dbb9376e07129493122",
        "version_major": 2,
        "version_minor": 0
       },
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
