--- a/basic/Ejemplo básico GLC.ipynb
+++ b/basic/Ejemplo básico GLC.ipynb
@@ -268,7 +268,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f9a013950b8>"
+       "<graphviz.dot.Graph at 0x7fb59001a160>"
       ]
      },
      "execution_count": 9,
@@ -573,7 +573,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f9a01369c88>"
+       "<graphviz.dot.Graph at 0x7fb590038208>"
       ]
      },
      "execution_count": 16,
@@ -865,7 +865,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7f9a013917f0>"
+       "<graphviz.dot.Graph at 0x7fb598216320>"
       ]
      },
      "execution_count": 20,
@@ -939,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
