--- a/basic/Ejemplo básico PDA.ipynb
+++ b/basic/Ejemplo básico PDA.ipynb
@@ -86,9 +86,8 @@
       " b -> q_1, A A Z₀],\n",
       " b -> q_1, A Z₀],\n",
       " b -> q_1, Z₀] | q_2, Z₀],\n",
-      " ε -> q_2, Z₀],\n",
       " \n",
-      "Con q_2, Z₀] Se acepta? Sí\n"
+      "Con q_1, Z₀] | q_2, Z₀] Se acepta? Sí\n"
      ]
     }
    ],
@@ -147,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bf49164b7746a998bad79e74571f88",
+       "model_id": "96ee58bc485a40798e9b1434f06c8e8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +239,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f2de44821d0>"
+       "<graphviz.dot.Digraph at 0x7f9c1120a5f8>"
       ]
      },
      "execution_count": 8,
@@ -328,7 +327,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f2de44822e8>"
+       "<graphviz.dot.Digraph at 0x7f9c111b6400>"
       ]
      },
      "execution_count": 9,
@@ -343,31 +342,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61144e6b0cef4176af7e150bae5fa547",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Text(value='aaabbb', description='Cadena'), Button(description='⏎', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "s=Simulation(aⁿbⁿ,'aaabbb')\n",
-    "s.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +375,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,6 +383,13 @@
    "source": [
     "aⁿbⁿ.save_gif('aaabbb')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -427,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
