--- a/basic/Expresiones Regulares, reducciones y minimización.ipynb
+++ b/basic/Expresiones Regulares, reducciones y minimización.ipynb
@@ -9,11 +9,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "\n",
-    "module_path = os.path.abspath(os.path.join('../..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)"
+    "import sys"
    ]
   },
   {
@@ -24,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "from maquinas.regular.RE import RE\n",
+    "from maquinas.regular.RE import RegularExpression\n",
     "from maquinas.regular.reductions import *\n",
     "from maquinas.regular.minimization import *"
    ]
@@ -89,7 +85,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ae43c8>"
+       "<graphviz.dot.Digraph at 0x7f38d8e78f98>"
       ]
      },
      "execution_count": 3,
@@ -171,7 +167,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ae47b8>"
+       "<graphviz.dot.Digraph at 0x7f38c1fa5668>"
       ]
      },
      "execution_count": 4,
@@ -234,7 +230,7 @@
        "<text text-anchor=\"middle\" x=\"157.0433\" y=\"-136.5976\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬ</text>\n",
        "</g>\n",
        "<!-- q_0&#45;&gt;q_0ᴬ -->\n",
-       "<g id=\"edge7\" class=\"edge\">\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
        "<title>q_0&#45;&gt;q_0ᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M83.6038,-103.9626C95.1448,-109.6727 109.6335,-116.8411 122.6854,-123.2987\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"121.3575,-126.5466 131.8726,-127.8441 124.4617,-120.2725 121.3575,-126.5466\"/>\n",
@@ -247,7 +243,7 @@
        "<text text-anchor=\"middle\" x=\"157.0433\" y=\"-53.5976\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴮ</text>\n",
        "</g>\n",
        "<!-- q_0&#45;&gt;q_0ᴮ -->\n",
-       "<g id=\"edge6\" class=\"edge\">\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
        "<title>q_0&#45;&gt;q_0ᴮ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M84.5604,-84.7661C95.6434,-80.566 109.2635,-75.4045 121.6937,-70.6939\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"123.2254,-73.8564 131.3361,-67.0397 120.7448,-67.3106 123.2254,-73.8564\"/>\n",
@@ -299,7 +295,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ad1f98>"
+       "<graphviz.dot.Digraph at 0x7f38c1f9e860>"
       ]
      },
      "execution_count": 5,
@@ -405,7 +401,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ad1a58>"
+       "<graphviz.dot.Digraph at 0x7f38c1f9e5c0>"
       ]
      },
      "execution_count": 6,
@@ -460,7 +456,7 @@
        "<text text-anchor=\"middle\" x=\"157.0433\" y=\"-79.048\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬ</text>\n",
        "</g>\n",
        "<!-- q_0&#45;&gt;q_0ᴬ -->\n",
-       "<g id=\"edge5\" class=\"edge\">\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
        "<title>q_0&#45;&gt;q_0ᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M83.1304,-39.1762C95.1473,-46.2602 110.4717,-55.294 124.0478,-63.2971\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"122.2724,-66.3133 132.6644,-68.3766 125.8273,-60.2831 122.2724,-66.3133\"/>\n",
@@ -474,7 +470,7 @@
        "<text text-anchor=\"middle\" x=\"353.6338\" y=\"-23.048\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_f</text>\n",
        "</g>\n",
        "<!-- q_0&#45;&gt;q_f -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
        "<title>q_0&#45;&gt;q_f</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M86.4068,-26.748C137.4099,-26.748 255.7174,-26.748 316.3477,-26.748\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"316.6179,-30.2481 326.6179,-26.748 316.6179,-23.2481 316.6179,-30.2481\"/>\n",
@@ -518,7 +514,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37dc83d160>"
+       "<graphviz.dot.Digraph at 0x7f38c1fa5860>"
       ]
      },
      "execution_count": 7,
@@ -541,7 +537,7 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td></td><td><strong>a</strong></td><td><strong>b</strong></td><td><strong>ε</strong></td></tr><tr><td ><strong>⟶q_0</strong></td><td>∅</td><td>∅</td><td>q_0ᴮ,q_0ᴬᴬ</td></tr><tr><td ><strong>q_0ᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴬᴬ,q_0ᴬᴬᴬ</td></tr><tr><td ><strong>q_0ᴬᴬᴬ</strong></td><td>q_1ᴬᴬᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>q_1ᴬᴬᴬᴬᴮᴬ</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮ</strong></td><td>q_1ᴬᴮ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮᴬᴬᴬᴮᴬ</strong></td><td>q_1ᴬᴮᴬᴬᴬᴮᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮᴬᴮᴬ</strong></td><td>q_1ᴬᴮᴬᴮᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴮ</strong></td><td>∅</td><td>∅</td><td>q_fᴮ,q_0ᴬᴮ</td></tr><tr><td ><strong>q_0ᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬ,q_0ᴬᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_0ᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴬᴮᴬᴬᴬᴮᴬ,q_fᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_0ᴮᴬᴬᴮᴬ</strong></td><td>∅</td><td>q_1ᴮᴬᴬᴮᴬ</td><td>∅</td></tr><tr><td ><strong>q_0ᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴮᴬ,q_0ᴬᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴬᴬ</td></tr><tr><td ><strong>q_1ᴬᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴮ</strong></td><td>∅</td><td>∅</td><td>q_fᴮ</td></tr><tr><td ><strong>q_1ᴬᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴮᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_fᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬ,q_0ᴬᴬ</td></tr><tr><td bgcolor=\"#32a852\"><strong>q_fᴮ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮ</td></tr><tr><td bgcolor=\"#32a852\"><strong>q_fᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬ</td></tr><tr><td ><strong>q_fᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴬᴬᴮᴬ,q_0ᴮᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_fᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴮᴬ,q_fᴮᴬ</td></tr></table>"
+       "<table><tr><td></td><td><strong>a</strong></td><td><strong>b</strong></td><td><strong>ε</strong></td></tr><tr><td ><strong>⟶q_0</strong></td><td>∅</td><td>∅</td><td>q_0ᴮ,q_0ᴬᴬ</td></tr><tr><td ><strong>q_0ᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴬᴬᴬ,q_fᴬᴬ</td></tr><tr><td ><strong>q_0ᴬᴬᴬ</strong></td><td>q_1ᴬᴬᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>q_1ᴬᴬᴬᴬᴮᴬ</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮ</strong></td><td>q_1ᴬᴮ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮᴬᴬᴬᴮᴬ</strong></td><td>q_1ᴬᴮᴬᴬᴬᴮᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴬᴮᴬᴮᴬ</strong></td><td>q_1ᴬᴮᴬᴮᴬ</td><td>∅</td><td>∅</td></tr><tr><td ><strong>q_0ᴮ</strong></td><td>∅</td><td>∅</td><td>q_0ᴬᴮ,q_fᴮ</td></tr><tr><td ><strong>q_0ᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴬᴬᴬᴬᴮᴬ,q_fᴮᴬ</td></tr><tr><td ><strong>q_0ᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴬᴬᴮᴬ,q_0ᴬᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_0ᴮᴬᴬᴮᴬ</strong></td><td>∅</td><td>q_1ᴮᴬᴬᴮᴬ</td><td>∅</td></tr><tr><td ><strong>q_0ᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴮᴬ,q_0ᴬᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴬᴬ</td></tr><tr><td ><strong>q_1ᴬᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴮ</strong></td><td>∅</td><td>∅</td><td>q_fᴮ</td></tr><tr><td ><strong>q_1ᴬᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴬᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_fᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_1ᴮᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴮᴬ</td></tr><tr><td ><strong>q_fᴬᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬ,q_0ᴬᴬ</td></tr><tr><td bgcolor=\"#32a852\"><strong>q_fᴮ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮ</td></tr><tr><td bgcolor=\"#32a852\"><strong>q_fᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬ</td></tr><tr><td ><strong>q_fᴮᴬᴬᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴬᴮᴬ,q_0ᴮᴬᴬᴬᴮᴬ</td></tr><tr><td ><strong>q_fᴮᴬᴮᴬ</strong></td><td>∅</td><td>∅</td><td>q_0ᴮᴬᴮᴬ,q_fᴮᴬ</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -552,7 +548,7 @@
     }
    ],
    "source": [
-    "reg = RE('a*(ba*ba*)*+a*')\n",
+    "reg = RegularExpression('a*(ba*ba*)*+a*')\n",
     "reg=reg.ndfa_e()\n",
     "reg.table()"
    ]
@@ -627,7 +623,7 @@
        "<text text-anchor=\"middle\" x=\"271.5369\" y=\"-246.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬᴬᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴬᴬ&#45;&gt;q_0ᴬᴬᴬ -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
        "<title>q_0ᴬᴬ&#45;&gt;q_0ᴬᴬᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M185.7624,-180.1954C200.5393,-192.2207 219.539,-207.6825 235.8992,-220.9962\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"233.723,-223.7377 243.6885,-227.335 238.1414,-218.3083 233.723,-223.7377\"/>\n",
@@ -640,7 +636,7 @@
        "<text text-anchor=\"middle\" x=\"495.3247\" y=\"-182.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_fᴬᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴬᴬ&#45;&gt;q_fᴬᴬ -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
        "<title>q_0ᴬᴬ&#45;&gt;q_fᴬᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M192.7022,-162.4672C253.6712,-167.2078 387.0381,-177.5778 454.5056,-182.8238\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"454.5054,-186.3342 464.7467,-183.6201 455.0481,-179.3553 454.5054,-186.3342\"/>\n",
@@ -693,7 +689,7 @@
        "<text text-anchor=\"middle\" x=\"721.0623\" y=\"-257.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬᴬᴬᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬ&#45;&gt;q_0ᴬᴬᴬᴬᴮᴬ -->\n",
-       "<g id=\"edge25\" class=\"edge\">\n",
+       "<g id=\"edge24\" class=\"edge\">\n",
        "<title>q_0ᴮᴬ&#45;&gt;q_0ᴬᴬᴬᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M626.6216,-202.4568C640.1212,-210.8248 656.9549,-221.2595 672.6559,-230.992\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"670.8903,-234.0154 681.2338,-236.3092 674.5783,-228.0657 670.8903,-234.0154\"/>\n",
@@ -707,7 +703,7 @@
        "<text text-anchor=\"middle\" x=\"2282.2699\" y=\"-182.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_fᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬ&#45;&gt;q_fᴮᴬ -->\n",
-       "<g id=\"edge24\" class=\"edge\">\n",
+       "<g id=\"edge25\" class=\"edge\">\n",
        "<title>q_0ᴮᴬ&#45;&gt;q_fᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M631.4057,-185.9977C655.8327,-185.9977 690.604,-185.9977 721.0623,-185.9977 721.0623,-185.9977 721.0623,-185.9977 2168.3258,-185.9977 2191.3409,-185.9977 2216.9709,-185.9977 2238.0854,-185.9977\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"2238.3663,-189.4978 2248.3663,-185.9977 2238.3662,-182.4978 2238.3663,-189.4978\"/>\n",
@@ -746,7 +742,7 @@
        "<text text-anchor=\"middle\" x=\"1132.7872\" y=\"-336.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬᴮᴬᴬᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴬᴮᴬᴬᴬᴮᴬ -->\n",
-       "<g id=\"edge10\" class=\"edge\">\n",
+       "<g id=\"edge11\" class=\"edge\">\n",
        "<title>q_0ᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴬᴮᴬᴬᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1033.8557,-283.8478C1048.3531,-292.076 1064.9292,-301.484 1080.3149,-310.2163\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"1078.787,-313.3735 1089.2115,-315.2657 1082.2422,-307.2857 1078.787,-313.3735\"/>\n",
@@ -759,7 +755,7 @@
        "<text text-anchor=\"middle\" x=\"1413.7699\" y=\"-258.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_fᴮᴬᴬᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬᴬᴬᴮᴬ&#45;&gt;q_fᴮᴬᴬᴬᴮᴬ -->\n",
-       "<g id=\"edge11\" class=\"edge\">\n",
+       "<g id=\"edge10\" class=\"edge\">\n",
        "<title>q_0ᴮᴬᴬᴬᴮᴬ&#45;&gt;q_fᴮᴬᴬᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1039.7636,-261.1076C1117.7344,-261.2931 1275.1606,-261.6678 1358.7373,-261.8667\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"1358.7901,-265.3668 1368.7985,-261.8907 1358.8068,-258.3668 1358.7901,-265.3668\"/>\n",
@@ -786,7 +782,7 @@
        "<text text-anchor=\"middle\" x=\"1347.4239\" y=\"-304.7977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">ε</text>\n",
        "</g>\n",
        "<!-- q_fᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴮᴬᴬᴬᴮᴬ -->\n",
-       "<g id=\"edge12\" class=\"edge\">\n",
+       "<g id=\"edge13\" class=\"edge\">\n",
        "<title>q_fᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴮᴬᴬᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1369.2696,-256.4204C1327.621,-251.4991 1263.6248,-244.7005 1207.8328,-241.9977 1153.9689,-239.3883 1092.6957,-245.7701 1049.516,-251.8288\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"1048.8907,-248.3827 1039.493,-253.2749 1049.8903,-255.3109 1048.8907,-248.3827\"/>\n",
@@ -799,7 +795,7 @@
        "<text text-anchor=\"middle\" x=\"1543.8622\" y=\"-258.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴮᴬᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_fᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴮᴬᴬᴮᴬ -->\n",
-       "<g id=\"edge13\" class=\"edge\">\n",
+       "<g id=\"edge12\" class=\"edge\">\n",
        "<title>q_fᴮᴬᴬᴬᴮᴬ&#45;&gt;q_0ᴮᴬᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1458.9048,-261.9977C1469.36,-261.9977 1480.5748,-261.9977 1491.3169,-261.9977\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"1491.4311,-265.4978 1501.431,-261.9977 1491.431,-258.4978 1491.4311,-265.4978\"/>\n",
@@ -838,7 +834,7 @@
        "<text text-anchor=\"middle\" x=\"1918.5404\" y=\"-328.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬᴮᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬᴮᴬ&#45;&gt;q_0ᴬᴮᴬᴮᴬ -->\n",
-       "<g id=\"edge19\" class=\"edge\">\n",
+       "<g id=\"edge18\" class=\"edge\">\n",
        "<title>q_0ᴮᴬᴮᴬ&#45;&gt;q_0ᴬᴮᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1828.3935,-280.9407C1842.01,-288.6528 1857.9711,-297.6927 1872.6479,-306.0053\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"1871.1617,-309.1859 1881.5879,-311.0687 1874.6115,-303.095 1871.1617,-309.1859\"/>\n",
@@ -851,7 +847,7 @@
        "<text text-anchor=\"middle\" x=\"2168.3258\" y=\"-252.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_fᴮᴬᴮᴬ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮᴬᴮᴬ&#45;&gt;q_fᴮᴬᴮᴬ -->\n",
-       "<g id=\"edge18\" class=\"edge\">\n",
+       "<g id=\"edge19\" class=\"edge\">\n",
        "<title>q_0ᴮᴬᴮᴬ&#45;&gt;q_fᴮᴬᴮᴬ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M1833.4992,-261.3782C1902.3672,-260.2715 2046.2966,-257.9586 2121.0228,-256.7578\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"2121.1502,-260.2563 2131.0927,-256.596 2121.0377,-253.2572 2121.1502,-260.2563\"/>\n",
@@ -905,7 +901,7 @@
        "<text text-anchor=\"middle\" x=\"271.5369\" y=\"-85.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_0ᴬᴮ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮ&#45;&gt;q_0ᴬᴮ -->\n",
-       "<g id=\"edge29\" class=\"edge\">\n",
+       "<g id=\"edge28\" class=\"edge\">\n",
        "<title>q_0ᴮ&#45;&gt;q_0ᴬᴮ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M187.7146,-69.2916C200.8037,-72.3687 216.8291,-76.1362 231.3491,-79.5498\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"230.5706,-82.9621 241.1063,-81.8436 232.1727,-76.1479 230.5706,-82.9621\"/>\n",
@@ -919,7 +915,7 @@
        "<text text-anchor=\"middle\" x=\"495.3247\" y=\"-26.2977\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q_fᴮ</text>\n",
        "</g>\n",
        "<!-- q_0ᴮ&#45;&gt;q_fᴮ -->\n",
-       "<g id=\"edge28\" class=\"edge\">\n",
+       "<g id=\"edge29\" class=\"edge\">\n",
        "<title>q_0ᴮ&#45;&gt;q_fᴮ</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M187.8495,-57.2112C202.0477,-54.3492 219.7961,-51.0723 235.7901,-48.9977 312.9629,-38.9872 403.7814,-33.8461 454.9452,-31.5536\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"455.403,-35.0371 465.2419,-31.1069 455.0996,-28.0437 455.403,-35.0371\"/>\n",
@@ -956,7 +952,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ad1be0>"
+       "<graphviz.dot.Digraph at 0x7f38c1f9e400>"
       ]
      },
      "execution_count": 9,
@@ -1127,7 +1123,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f37c2ae4eb8>"
+       "<graphviz.dot.Digraph at 0x7f38c1fa5ef0>"
       ]
      },
      "execution_count": 10,
@@ -1157,7 +1153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
