--- a/basic/Ejemplo básico AFD.ipynb
+++ b/basic/Ejemplo básico AFD.ipynb
@@ -121,14 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Con q_0 Se acepta? Sí\n"
      ]
     }
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaa\")\n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"Con {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -146,7 +145,7 @@
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaab\")\n",
-    "print(f\"Con {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"Con {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -157,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15f2d574d906425f9823ce17e72a7f1e",
+       "model_id": "e43f7f43950e400088fe119330b353b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +247,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f76100a8f28>"
+       "<graphviz.dot.Digraph at 0x7fafdad75b00>"
       ]
      },
      "execution_count": 9,
@@ -334,7 +333,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f761005a940>"
+       "<graphviz.dot.Digraph at 0x7fafdad29588>"
       ]
      },
      "execution_count": 10,
@@ -425,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
