--- a/basic/Ejemplo básico AFND-e.ipynb
+++ b/basic/Ejemplo básico AFND-e.ipynb
@@ -120,7 +120,7 @@
     "        print(f\"{q}\",end=\"\\n \")\n",
     "    res=q\n",
     "    \n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -139,7 +139,7 @@
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaab\")\n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -158,7 +158,7 @@
    ],
    "source": [
     "res=bes_pares.delta_extended(None,\"bbaabbbaaaaaaaabaaaaa\")\n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.accept(res) else \"No\" )"
+    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if bes_pares.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -242,7 +242,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f99d3dd4978>"
+       "<graphviz.dot.Digraph at 0x7f67180dfbe0>"
       ]
      },
      "execution_count": 8,
@@ -337,7 +337,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f99d3de3518>"
+       "<graphviz.dot.Digraph at 0x7f67180dfd68>"
       ]
      },
      "execution_count": 9,
@@ -359,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99d5fe1580514a689b8316b6978f2da5",
+       "model_id": "f711029d499343ff8a63f8e1508d3869",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
