--- a/basic/Ejemplo básico TSPDA.ipynb
+++ b/basic/Ejemplo básico TSPDA.ipynb
@@ -153,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acbad0e036d44760a3d8de922cea5118",
+       "model_id": "a6944fba780e4a738e8416d0230a9cfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +264,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f051404bfd0>"
+       "<graphviz.dot.Digraph at 0x7fa3200e3780>"
       ]
      },
      "execution_count": 8,
@@ -370,7 +370,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f051407c940>"
+       "<graphviz.dot.Digraph at 0x7fa31178d2e8>"
       ]
      },
      "execution_count": 9,
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"pda.gif\">"
+       "<img src=\"tspda.gif\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -451,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
